--- a/Sudoku.Data/Sudoku.Data.csproj
+++ b/Sudoku.Data/Sudoku.Data.csproj
@@ -41,10 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helper\IndexHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SudokuFeld.cs" />
+    <Compile Include="SudokuWert.cs" />
+    <Compile Include="SudokuZelle.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Helper\" />
     <Folder Include="Solver\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
