--- a/Sudoku.Data/Sudoku.Data.csproj
+++ b/Sudoku.Data/Sudoku.Data.csproj
@@ -43,12 +43,15 @@
   <ItemGroup>
     <Compile Include="Helper\IndexHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Solver\LösungsErgebnis.cs" />
+    <Compile Include="Solver\LösungsStatus.cs" />
+    <Compile Include="Solver\LösungsZweig.cs" />
+    <Compile Include="Solver\SolverPool.cs" />
+    <Compile Include="Solver\SudokuLöser.cs" />
     <Compile Include="SudokuFeld.cs" />
     <Compile Include="SudokuWert.cs" />
     <Compile Include="SudokuZelle.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Solver\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
